[gd_scene load_steps=22 format=2]

[ext_resource path="res://Fonts/battle_hover.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Pic/battle.png" type="Texture" id=3]
[ext_resource path="res://Pic/circle.png" type="Texture" id=4]
[ext_resource path="res://Pic/close (1).png" type="Texture" id=5]
[ext_resource path="res://script/Battle.gd" type="Script" id=6]
[ext_resource path="res://Pic/time1.png" type="Texture" id=7]
[ext_resource path="res://Pic/time3.png" type="Texture" id=8]
[ext_resource path="res://Pic/time2.png" type="Texture" id=9]
[ext_resource path="res://Pic/battle_B2.png" type="Texture" id=10]
[ext_resource path="res://Pic/battle_B1.png" type="Texture" id=11]
[ext_resource path="res://Fonts/123.tres" type="StyleBox" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.921569, 0.92549, 1, 0.513726 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 50
corner_radius_bottom_right = 50

[sub_resource type="DynamicFont" id=3]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=10]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
outline_size = 1
outline_color = Color( 1, 1, 1, 0.627451 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.584314, 0.584314, 0.584314, 0.615686 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=11]
size = 60
outline_size = 3
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
expand = true

[node name="Panel" type="Panel" parent="Background"]
margin_top = -1.0
margin_right = 1920.0
margin_bottom = 1079.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="opponent" type="Panel" parent="Background"]
margin_top = 30.0
margin_right = 450.0
margin_bottom = 220.0
custom_styles/panel = SubResource( 2 )

[node name="pic" type="TextureRect" parent="Background/opponent"]
margin_left = 40.0
margin_top = 30.0
margin_right = 200.0
margin_bottom = 170.0
texture = ExtResource( 11 )
expand = true

[node name="name" type="Label" parent="Background/opponent"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -36.5
margin_right = -58.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "吳堃豪"

[node name="Player" type="Panel" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -510.0
margin_bottom = -320.0
custom_styles/panel = SubResource( 4 )

[node name="pic" type="TextureRect" parent="Background/Player"]
margin_left = 253.0
margin_top = 30.0
margin_right = 413.0
margin_bottom = 170.0
texture = ExtResource( 10 )

[node name="name" type="Label" parent="Background/Player"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 53.0
margin_top = -36.5
margin_right = 203.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "許馨文"

[node name="Topic" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -712.0
margin_top = -315.5
margin_right = 712.0
margin_bottom = -132.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
align = 1
valign = 1
autowrap = true

[node name="Options1" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 393.0
margin_right = 1363.0
margin_bottom = 533.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
clip_text = true
icon_align = 1

[node name="content" type="Label" parent="Background/Options1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="oppo_correct" type="TextureRect" parent="Background/Options1"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/Options1"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="player_correct" type="TextureRect" parent="Background/Options1"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options1"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="Options2" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 561.0
margin_right = 1363.0
margin_bottom = 701.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="content" type="Label" parent="Background/Options2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="oppo_correct" type="TextureRect" parent="Background/Options2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/Options2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="player_correct" type="TextureRect" parent="Background/Options2"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options2"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="Options3" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 730.0
margin_right = 1363.0
margin_bottom = 870.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="content" type="Label" parent="Background/Options3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="oppo_correct" type="TextureRect" parent="Background/Options3"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/Options3"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="player_correct" type="TextureRect" parent="Background/Options3"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options3"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="Options4" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 898.0
margin_right = 1363.0
margin_bottom = 1038.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="content" type="Label" parent="Background/Options4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
autowrap = true

[node name="oppo_correct" type="TextureRect" parent="Background/Options4"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/Options4"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -35.0
margin_right = 107.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="player_correct" type="TextureRect" parent="Background/Options4"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 4 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options4"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -35.0
margin_right = -37.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="TextureProgress" type="TextureProgress" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 41.0
margin_right = 90.0
margin_bottom = 221.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 8 )
fill_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="countdown_label" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_top = 65.0
margin_right = 195.0
margin_bottom = 184.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Background"]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="ChangeTime" type="Timer" parent="Background"]

[connection signal="pressed" from="Background/Options1" to="." method="_on_Options1_pressed"]
[connection signal="pressed" from="Background/Options2" to="." method="_on_Options2_pressed"]
[connection signal="pressed" from="Background/Options3" to="." method="_on_Options3_pressed"]
[connection signal="pressed" from="Background/Options4" to="." method="_on_Options4_pressed"]
[connection signal="timeout" from="Background/Timer" to="." method="_on_Timer_timeout"]
